# card-approval-prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  config-example.env  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties  test.md
ansible/group_vars/: all.yml
ansible/inventory/: hosts.ini
ansible/playbooks/: 01_create_jenkins_vm.yml  03_deploy_jenkins.yml  04_configure_jenkins.yml
app/: README.md  main.py  requirements.txt
app/core/: config.py  logging.py  metrics.py
app/routers/: health.py  predict.py
app/schemas/: health.py  prediction.py
app/services/: model_service.py  preprocessing_service.py
cap_model/: .env.example  .gitignore  QUICKSTART.md  README.md  STRUCTURE.md  requirements.txt  setup.py
cap_model/models/: .gitkeep
cap_model/notebooks/: test.ipynb
cap_model/scripts/: predict.py  run_eda.py  run_preprocessing.py  run_training.py  train.py
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: 00_Setup_Guide.md  01_Helm_Deployment.md  02_MLflow_Training.md  03_API_Service.md  03_Helm_Deployment.md  04_CICD_Pipeline.md  04_MLflow_Training.md  05_API_Service.md  05_Monitoring.md  06_CICD_Pipeline.md  06_NGINX.md  07_Monitoring.md  08_Configuration.md  index.md
helm-charts/: deploy.sh
k8s/: ingress.yaml
models/: .gitkeep
scripts/: download_model.py  evaluate_model.py  monday-startup.sh  weekend-shutdown.sh
terraform/: main.tf  variables.tf
tests/: conftest.py  test_api.py  test_health.py  test_predict.py
training/: README.md
training/notebooks/: 01_eda.ipynb  (+3 more)
(+34 files in other folders)
